Wed Oct 14 16:51:35 1998  Jason L Tibbitts  <tibbs@morpheus.math.uh.edu>

	* Various: turn autoloading back on.
	
	* lib/Mj/Digest/Build.pm (build_mime): Print the message number
 	instead of the raw message, which might be a listref instead of a
 	string.
	
	* lib/Mj/Resend.pm (_post): Allow for the possibility of an
 	undefined subject.
	(_post): Unfold the archive header to prevent newlines from
 	sneaking in.

Tue Oct 13 15:53:46 1998  Jason L Tibbitts  <tibbs@morpheus.math.uh.edu>

	* lib/Majordomo.pm (config_get_vars): Neglected to make Mj::Addr
 	object.

	* lib/Mj/Digest.pm (_open_state): Need to use Data::Dumper before
 	we can dump the state.

	* lib/Mj/Resend.pm (_post): Check to see that 'digests' is non-nll
 	before trying to pass the archive data to the digestifier.

	* lib/Mj/Archive.pm (add): Return the complete message name, not
 	just the number within the current archive.

Mon Oct 12 17:18:14 1998  Jason L Tibbitts  <tibbs@morpheus.math.uh.edu>

	* lib/Mj/Config.pm (parse_digests): Initialize some parts of the
 	parsed structure.

	* lib/Mj/List.pm (digest_build): Rename from build_digest.

	* lib/Mj/Resend.pm (_post): Call deliver with new args.

	* lib/Mj/MailOut.pm (deliver): Take exclude list as a listref now.
	Put class at end of arglist.
	
	* bin/mj_shell (completer): Tighten up spece requirements when
 	completing config variables.  Fix report by RSW.

Sun Oct 11 22:24:09 1998  Jason L Tibbitts  <tibbs@morpheus.math.uh.edu>

	* lib/Mj/Resend.pm (_post): Get rid of high pripority class.

	* lib/Mj/Digest.pm (add): Update all state information and call
 	the trigger.
	(decide): New function: decide based upon configured digest data
 	and state whether or not to push a new digest.
	(choose): New function: choose which of the waiting messages
 	should be in the new digest.

Wed Oct  7 17:35:11 1998  Jason L Tibbitts  <tibbs@morpheus.hpc.uh.edu>

	* lib/Mj/Digest.pm (in_clock): New function: is a time in a clock
 	list or not.
